[package]
name = "gpb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
async-channel = "2.3.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
reqwest = { version = "0.12.9", features = ["socks", "json", "brotli"] }
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.91"
once_cell = "1.20.2"
regex = "1.11.1"
cidr = "0.2.3"
rand = "0.9.0-alpha.2"
serde_json = "1.0.140"
clap = { version = "4.5.32", features = ["derive"] }
indicatif = "0.17.7"
console = "0.15.7"  # Add this for styled text
lazy_static = "1.5.0"
phonenumber = "0.3.7"
urlencoding = "2.1.3"
futures = "0.3.31"
prost = "0.13.5"
base64 = "0.22.1"
csv = "1.3.1"
